한눈에보기02 fild position

--- a/noonno/resource/css/products_map.css
+++ b/noonno/resource/css/products_map.css
@@ -6,6 +6,12 @@
   box-sizing: border-box;
   border-radius: 10px;
 }
+.mp-table-tit-box.fixed{
+  position: fixed;
+  top:130px;
+  z-index: 2;
+  background: #fff;
+}
 .mp-table-tit-left {
   width: 172px;
   text-align: center;
