--- a/noonno/resource/css/common_kim.css
+++ b/noonno/resource/css/common_kim.css
@@ -197,6 +197,7 @@
     width: 100%;
     min-width: 1280px;
     background: #fff;
+    height:130px;
 }
 .gnb_wrap .gnb_top {
     padding: 10px 80px;
