--- a/noonno/resource/css/common.css
+++ b/noonno/resource/css/common.css
@@ -389,3 +389,73 @@ p.total-num span{
 
 }
 
+
+
+/* prd-tooltip */
+.tooltip-wrap {
+    display: flex;
+    float: left;
+    margin-right: 20px;
+    align-items: center;
+}
+.tooltip-wrap > P{margin-right:3px;}
+.tooltip {
+    line-height: 45px;
+}
+.tooltip > img{
+    vertical-align: sub;
+    cursor:pointer;
+}
+.tooltip .tooltip-info{
+    top:40px;
+}
+.tooltip-info {
+    position: absolute;
+    z-index: 10;
+    top: 20px;
+    left: 0;
+    width: 225px;
+    height: 187px;
+    background: url(../img/prd/tooltipbg.png);
+    font-family: 'Noto Sans KR', sans-serif;
+    background-size: 225px;
+    background-position: center top;
+    background-repeat: no-repeat;
+    font-style: normal;
+    opacity: 0;
+    transition: all 0.4s ease-in-out;
+    visibility:hidden;
+  }
+  .tooltip-info.on{
+    opacity: 1;
+    visibility:visible;
+  }
+  .tooltip-info > div {
+    padding: 27px 18px;
+  }
+  .tooltip-info a {
+    display:block;
+    color: #666;
+    font-size: 14px;
+    line-height: 22px;
+  }
+  .tooltip-info a img {
+    margin-left: 5px;
+  }
+  .tooltip-info .tooltip-tit {
+    margin-bottom: 6px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 25px;
+  }
+  .tooltip-info .tooltip-txt {
+    color: #666;
+    font-size: 14px;
+    line-height: 22px;
+  }
+  .tooltip-info .tooltip-line {
+    width: 100%;
+    height: 1px;
+    margin: 13px 0;
+    background: #ddd;
+  }
