--- a/noonno/resource/css/products.css
+++ b/noonno/resource/css/products.css
@@ -65,56 +65,6 @@
   vertical-align: sub;
   cursor:pointer;
 }
-.tooltip-info {
-  position: absolute;
-  z-index: 10;
-  top: 20px;
-  left: 0;
-  width: 225px;
-  height: 187px;
-  background: url(../img/prd/tooltipbg.png);
-  font-family: 'Noto Sans KR', sans-serif;
-  background-size: 225px;
-  background-position: center top;
-  background-repeat: no-repeat;
-  font-style: normal;
-  opacity: 0;
-  transition: all 0.4s ease-in-out;
-  visibility:hidden;
-}
-.tooltip-info.on{
-  opacity: 1;
-  visibility:visible;
-}
-.tooltip-info > div {
-  padding: 27px 18px;
-}
-.tooltip-info a {
-  display:block;
-  color: #666;
-  font-size: 14px;
-  line-height: 22px;
-}
-.tooltip-info a img {
-  margin-left: 5px;
-}
-.tooltip-info .tooltip-tit {
-  margin-bottom: 6px;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 25px;
-}
-.tooltip-info .tooltip-txt {
-  color: #666;
-  font-size: 14px;
-  line-height: 22px;
-}
-.tooltip-info .tooltip-line {
-  width: 100%;
-  height: 1px;
-  margin: 13px 0;
-  background: #ddd;
-}
 .prd-search-reset {
   margin-top: 37px;
   text-align: center;
@@ -336,7 +286,7 @@
   display: flex;
 }
 .product-top .prd-option ul > li{
-  line-height:45px;
+  line-height:46px;
 }
 .product-top .prd-option .option-tit {
   margin-right: 23px;
@@ -348,21 +298,8 @@
 .product-top .prd-option .option-txt {
   width: 100%;
 }
-.product-top .prd-option .option-txt > div {
-  display: flex;
-  float: left;
-  margin-right: 20px;
-  align-items: center;
-}
-.product-top .prd-option .option-txt > div p{margin-right:3px;}
-.product-top .prd-option .option-txt > div > .tooltip {
-  line-height: 45px;
-}
-.product-top .prd-option .option-txt > div > .tooltip > img{
-  vertical-align: sub;
-}
-.product-top .prd-option .option-txt > div > .tooltip .tooltip-info{
-  top:40px;
+.product-top .prd-option .option-txt .tooltip{
+  line-height: 44px;
 }
 .product-top .prd-top-link{
   margin-top:40px;
@@ -531,7 +468,7 @@
   font-weight: 600;
 }
 .dt-info-wrap .dt-info-tit {
-  margin-bottom: 13px;
+  margin-bottom: 38px;
   color: #3B302F;
   font-weight: 700;
   font-size: 30px;
