--- a/noonno/resource/css/common_kim.css
+++ b/noonno/resource/css/common_kim.css
@@ -546,7 +546,7 @@ input[type='checkbox']:disabled + label > span {
 
 .location .hidden_div {
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     top: 65px;
     left: 10px;
     display: none;
@@ -559,6 +559,7 @@ input[type='checkbox']:disabled + label > span {
     padding: 18px 25px;
     border: 1px solid #aaa;
     border-radius: 10px;
+    background:#fff;
 }
 .location .hidden_loca li a {
     font-size: 16px;
@@ -627,7 +628,9 @@ input[type='checkbox']:disabled + label > span {
 .main_content {
     padding: 140px 80px 110px 80px;
 }
-
+.main_content .main_section_wrap .txt_bg{background:url(../img/main/bigText.png); background-repeat:no-repeat;
+background-position:0 85%;
+    }
 .main_content .slide .slide01 {
     background: url(../img/main/kvImg01.png), #ffe9e7;
 }
@@ -1713,6 +1716,7 @@ input[type='checkbox']:checked.compare_check + label:before {
     background: #B7976B;
     border-radius: 10px;
     padding:30px 70px;
+    width:965px;
 
 }
 #fullpage .section_in > .brown_box > .brown_box_in{
